# VoxelEngine

./: .gitmodules  CMakeLists.txt  CMakeUserPresets.json  conanfile.py  debug_build.bat  debug_build.sh  release_build.bat  release_build.sh
res/Shaders/: basic.frag  basic.vert  light_source.frag  light_source.vert  main.glslf  main.glslv
src/: main.cpp
src/Core/: Application.hpp  Window.cpp  Window.hpp
src/Object/: Block.cpp  Block.hpp  LightSource.cpp  LightSource.hpp  Mesh.cpp  Mesh.hpp
src/OpenGL/: IndexBuffer.cpp  IndexBuffer.hpp  ShaderProgram.cpp  ShaderProgram.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/Physics/: PhysicsEngine.cpp  PhysicsEngine.hpp
src/Render/: Camera.cpp  Camera.hpp  Texture2D.cpp  Texture2D.hpp  VoxelMesher.cpp  VoxelMesher.hpp  VoxelRenderer.cpp  VoxelRenderer.hpp
src/Resources/: ResourceManager.cpp  ResourceManager.hpp
src/Voxel/: Chunk.cpp  Chunk.hpp  Voxel.hpp  World.cpp  World.hpp
src/common/: ImGuiWrapper.cpp  ImGuiWrapper.hpp  Input.cpp  Input.hpp  Log.hpp
